# raytracer

./: .gitignore  LICENSE  NOTES.md  README.md  raytracer.cabal
src/Data/: Colour.hs  Material.hs  Ray.hs  Shape.hs  Vec.hs
src/Data/Vec/: .#Internal.hs  Internal.hs
src/Graphics/: Camera.hs  Internal.hs  Light.hs  Scene.hs  Shape.hs  Tracer.hs
src/Graphics/Ray/: .#Tracer.hs  Internal.hs  Monad.hs  Octree.hs  Ppm.hs  Tracer.hs  Types.hs
src/Graphics/Ray/Types/: BoundingBox.hs  Camera.hs  Light.hs  Material.hs  Scene.hs  Shape.hs
src/Graphics/Types/: Camera.hs  Light.hs  Material.hs  Scene.hs  Shape.hs
src/Parser/: Obj.hs
src/Text/: Mtl.hs  Obj.hs
