name:                tracer
version:             0.1.0.0
synopsis:            A ray tracer written in Haskell
license:             MIT
license-file:        LICENSE
author:              Pavel Yakovlev <zhmactep@gmail.com>
                   , Sergei Lebedev <superbobry@gmail.com>
maintainer:          superbobry@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.12

executable ray
  hs-source-dirs:    bin
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans -O2
  main-is:           Ray.hs
  build-depends:     base        == 4.6.*
                   , OpenGL      == 2.8.*
                   , GLUT        == 2.4.*
                   , bytestring  == 0.10.*
                   , tracer

executable bench
  hs-source-dirs:    bin
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans -O2 -threaded
  main-is:           Bench.hs
  build-depends:     base        == 4.6.*
                   , OpenGL      == 2.8.*
                   , GLUT        == 2.4.*
                   , bytestring  == 0.10.*
                   , deepseq           == 1.3.*
                   , tracer
library
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall -fno-warn-orphans -O2 -funbox-strict-fields -threaded
  Exposed-modules:   Data.Vec
                   , Data.Ray
                   , Data.Colour

                   , Graphics.Ray.Types
                   , Graphics.Ray.Tracer
                   , Text.Obj
                   , Text.Mtl

  other-modules:     Data.Vec.Internal
                   , Graphics.Ray.Internal
                   , Graphics.Ray.Types.Camera
                   , Graphics.Ray.Types.Light
                   , Graphics.Ray.Types.Material
                   , Graphics.Ray.Types.Scene
                   , Graphics.Ray.Types.Shape

  build-depends:     base              == 4.6.*
                   , bytestring-lexing == 0.4.*
                   , bytestring        == 0.10.*
                   , array             == 0.4.*
                   , attoparsec        == 0.10.4.*
                   , OpenGL            == 2.8.*
                   , parallel          == 3.2.*
                   , deepseq           == 1.3.*
